DevAccount/src/objects/ConditionSet__c.object
<CustomObject>
    <description>Governs the conditions for hiding Detail page buttons.</description>
    <fields>
        <fullName>HideCloneField__c</fullName>
        <description>Enter the API name of the field that must evaluate to True to hide the button from the detail page. Leave empty if not required.</description>
        <inlineHelpText>Enter the API name of the field that must evaluate to True to hide the button from the detail page. Leave empty if not required.</inlineHelpText>
        <label>Hide Clone Field</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HideDeleteField__c</fullName>
        <description>Enter the API name of the field that must evaluate to True to hide the button from the detail page. Leave empty if not required.</description>
        <inlineHelpText>Enter the API name of the field that must evaluate to True to hide the button from the detail page. Leave empty if not required.</inlineHelpText>
        <label>Hide Delete Field</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HideEditField__c</fullName>
        <description>Enter the API name of the field that must evaluate to True to hide the button from the detail page. Leave empty if not required.</description>
        <inlineHelpText>Enter the API name of the field that must evaluate to True to hide the button from the detail page. Leave empty if not required.</inlineHelpText>
        <label>Hide Edit Field</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HideOption__c</fullName>
        <description>Choose to Hide or Disable Buttons.</description>
        <inlineHelpText>Choose to Hide or Disable Buttons.</inlineHelpText>
        <label>Hide Option</label>
        <picklist>
            <picklistValues>
                <fullName>Disable</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Hide</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HideSubmitField__c</fullName>
        <description>Enter the API name of the field that must evaluate to True to hide the button from the detail page. Leave empty if not required.</description>
        <inlineHelpText>Enter the API name of the field that must evaluate to True to hide the button from the detail page. Leave empty if not required.</inlineHelpText>
        <label>Hide Submit Field</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KeyPrefix__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>The SObject key prefix associated with the SObject.</description>
        <inlineHelpText>The SObject key prefix associated with the SObject.</inlineHelpText>
        <label>Key Prefix</label>
        <length>3</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SObjectAPIName__c</fullName>
        <description>The full API name (including any namespace) of the SObject.</description>
        <inlineHelpText>The full API name (including any namespace) of the SObject.</inlineHelpText>
        <label>SObject API Name</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Condition Set</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SET{000000}</displayFormat>
        <label>Set Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Condition Sets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>